2008-07-27  Sam Steingold  <sds@gnu.org>

	* hashtable.tst: test support for circular keys

2008-07-24  Sam Steingold  <sds@gnu.org>

	* eval20.tst: add tests based on ansi-tests eval-when.15 & eval-when.17

2008-07-23  Sam Steingold  <sds@gnu.org>

	* bind.tst: test that flet/labels/macrolet respect SPECIAL declarations

2008-07-23  Sam Steingold  <sds@gnu.org>

	* tests.lisp (run-test): return logname instead of testname to
	clarify the output when the same test (e.g., bind) is run in both
	compiled and interpreted variants

2008-07-23  Sam Steingold  <sds@gnu.org>

	* eval20.tst: add examples from
	http://www.lisp.org/HyperSpec/Body/speope_fletcm_scm_macrolet.html

2008-07-21  Sam Steingold  <sds@gnu.org>

	* type.tst: check that the sets of declaration and type names are
	disjoint (see http://www.lisp.org/HyperSpec/Body/dec_type.html)

2008-07-21  Sam Steingold  <sds@gnu.org>

	* streamslong.tst: add a test for bug #[ 2022362 ]: after a ((setf
	stream-element-type) '(unsigned-byte 8)) after read-line on a :dos
	stream an NL byte (10) is read from the stream

2008-07-20  Sam Steingold  <sds@gnu.org>

	* iofkts.tst: (copy-pprint-dispatch) returns a fresh object

2008-07-18  Sam Steingold  <sds@gnu.org>

	* iofkts.tst: enable the formerly risky test

2008-07-17  Sam Steingold  <sds@gnu.org>

	* number2.tst (float-rational-cmp): also compare x with ~10x to
	check the overflow handling

2008-07-17  Sam Steingold  <sds@gnu.org>

	* ext-clisp.tst: test canonicalize

2008-07-16  Sam Steingold  <sds@gnu.org>

	* path.tst: namespace cleanup (string -> my-string &c)

2008-07-16  Sam Steingold  <sds@gnu.org>

	* path.tst: test DIRECTORY on poorly encoded names

2008-07-15  Bruno Haible  <bruno@clisp.org>

	* excepsit.tst: Change expected condition type in last commit.

2008-07-15  Sam Steingold  <sds@gnu.org>

	* alltest.tst: lambda-parameters-limit is exclusive;
	instead of disabling the test on win32/g++,
	reduce the g++ limit to 256 on all platforms