@@ -7,16 +7,16 @@
   (fresh-line) (prin1 object) (terpri) object)
 #+clisp (progn
 (defun kill-down (name)
-  (dolist (f (directory (ext:string-concat name "**")))
-    (format t "~&removing ~S~%" f)
-    (if (pathname-name f)
-        (delete-file f)
-        (ext:delete-directory f))))
+  (dolist (f (directory (ext:string-concat name "**/*")))
+    (format t "~&removing file ~S~%" f)
+    (delete-file f)))
 (defun rmrf (name)
-  (ext:dir (ext:string-concat name "**"))
+  (ext:dir (ext:string-concat name "**/*"))
+  (ext:dir (ext:string-concat name "**/"))
   (kill-down name)
-  (format t "~&removing ~S~%" name)
-  (ext:delete-directory name))
+  (dolist (d (directory (ext:string-concat name "**/")))
+    (format t "~&removing directory ~S~%" d)
+    (ext:delete-directory d)))
 (defun prepare-directory (name)
   (ensure-directories-exist name :verbose t)
   (kill-down name))
